--- a/components/header.css
+++ b/components/header.css
@@ -1,8 +1,8 @@
-header {
+/* header {
     
     text-align: center;
     width: 100%;
     height: 100%;
     border: 5px solid blue;
     margin: 0;
-  }
+  } */
