--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,3 @@
 @import url(components/card.css);
 @import url(components/header.css);
 @import url(components/navigation.css);
-
-body {
-  background-color: #f4f1f1;
-  font-family: Arial, sans-serif;
-  color: #cf2d2d;
-  padding-bottom: 140px;
-}
